<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_confirm">Confirmar password</string>
    <string name="hint_phone">Número de celular</string>
    <string name="hint_mail">Email</string>
    <string name="hint_question">Escriba una pregunta verificadora</string>
    <string name="hint_answer">Escriba una respuesta verificadora</string>
    <string name="hint_password">Password</string>
    <string name="btn_signin">Iniciar Sesión</string>
    <string name="btn_signup">Registrarse</string>
    <string name="remember_me">Recordarme</string>
    <string name="forgot_pswd">Olvidé mi contraseña</string>
    <string name="logo_principal">Logo Principal</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ask_user">Indique el correo del usuario</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forgot_password">OLVIDÉ MI CONTRASEÑA</string>
    <string name="btn_send_mail">Enviar Solicitud</string>
    <string name="forgot_password_title">Ingrese el correo del usuario, para restablecer la contraseña</string>
    <string name="forgot_password_question">Responda la pregunta verificadora</string>
    <string name="btn_change_password">Cambiar contraseña</string>
    <string name="btn_verification">Verificar</string>
    <string name="hint_respuesta">respuesta</string>
    <string name="forgto_pswd_question">Pregunta verificadora</string>
    <string name="hint_new_password">Nueva contraseña</string>
    <string name="forgot_new_password">Ingrese la nueva contraseña</string>
    <string name="remember_password">Recuerde que la contrasñea debe contener al menos 6 caracteres</string>


    <string name="action_rate">Rate</string>
    <string name="action_share">Share</string>
    <string name="backdrop_title">PC Fantastic</string>
    <string name="backdrop_subtitle">This Season Top 10 PC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_from">Dirección: Sin selección</string>
    <string name="label_to">Dirección: Sin selección</string>
    <string name="android_sdk_places_api_key">AIzaSyC1MjBS_hcmSoEjxCmm4JjoAVwsWBmPlco</string>
    <string name="label_direccion_inicial">Modificar Dirección Inicial</string>

    <string name="nombre_lugar">%1$s</string>
    <string name="localidad_lugar">Localidad: %1$s</string>
    <string name="duracion_lugar">Duración: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="empty_favoritos">No hay sitios favoritos guardados</string>

    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="about_app">Sobre la aplicacion</string>
    <string name="app_info">Esta aplicación permitirá conocer a los usuarios diversos mapas de las mejores zonas turísticas del Perú. Así como las rutas de viajes que se pueden realizar.</string>
    <string name="localidad_usuario">Lima, Perú</string>
    <string name="titulo_redes_sociales">Redes Sociales</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="twitter">TWITTER</string>
    <string name="facebook">FACEBOOK</string>
    <string name="youtube">YOUTUBE</string>
    <string name="titulo_perfil">Perfil</string>

</resources>