<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Repassword.RepasswordActivity">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_baseline_lock_120"
        android:contentDescription="@string/logo_principal">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/naranja"
        android:text="@string/forgot_password"
        tools:ignore="HardcodedText">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearForgotPasswordEmail">
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#736A68"
            android:text="@string/forgot_password_title">
        </TextView>

        <EditText
            android:id="@+id/editTextEmailForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="15dp"
            android:background="@drawable/shapemail"
            android:drawableStart="@drawable/ic_baseline_person_black_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_mail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonSendEmailForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shapesignin"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/btn_send_mail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearForgotPasswordPregunta">
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#736A68"
            android:text="@string/forgot_password_question">
        </TextView>

        <TextView
            android:id="@+id/txtQuestionVerifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#736A68"
            android:text="@string/forgto_pswd_question">
        </TextView>

        <EditText
            android:id="@+id/editTextRespuestaConfirmadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="15dp"
            android:background="@drawable/shapemail"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_respuesta"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonSendVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shapesignin"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/btn_verification" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/linearForgotChangePasword">
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="#736A68"
            android:text="@string/forgot_new_password">
        </TextView>

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:padding="15dp"
            android:background="@drawable/shapemail"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_new_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shapesignin"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/btn_change_password" />
    </LinearLayout>
</LinearLayout>