<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".SignUp.SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="200dp"
                    android:layout_height="162dp"
                    android:layout_marginTop="35dp"
                    android:contentDescription="@string/logo_principal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo_principal" />

                <EditText
                    android:id="@+id/editTextNombreCompletoSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/shapemail"
                    android:drawableStart="@drawable/ic_baseline_person_black_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <EditText
                    android:id="@+id/editTextEmailSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shapemail"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_mail"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/editTextNombreCompletoSignup"
                    app:layout_constraintStart_toStartOf="@+id/editTextNombreCompletoSignup"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNombreCompletoSignup" />

                <EditText
                    android:id="@+id/editTextPhoneSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shapemail"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_phone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/editTextEmailSignup"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextEmailSignup"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignup" />

                <EditText
                    android:id="@+id/editTextPasswordSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shapemail"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/editTextPhoneSignup"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextPhoneSignup"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhoneSignup" />

                <EditText
                    android:id="@+id/editTextConfirmPasswordSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shapemail"
                    android:drawableStart="@drawable/ic_baseline_lock_open_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_confirm"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/editTextPasswordSignup"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextPasswordSignup"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignup" />

                <Button
                    android:id="@+id/buttonSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/shapesignup"
                    android:padding="15dp"
                    android:shadowColor="@android:color/transparent"
                    android:text="@string/btn_signup"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.473"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextAnswerVerifier" />

                <EditText
                    android:id="@+id/editTextQuestionVerifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shapemail"
                    android:drawableStart="@drawable/ic_baseline_info_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_question"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/editTextConfirmPasswordSignup"
                    app:layout_constraintStart_toStartOf="@+id/editTextConfirmPasswordSignup"
                    app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPasswordSignup" />

                <EditText
                    android:id="@+id/editTextAnswerVerifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/shapemail"
                    android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/hint_answer"
                    android:importantForAutofill="no"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/editTextQuestionVerifier"
                    app:layout_constraintStart_toStartOf="@+id/editTextQuestionVerifier"
                    app:layout_constraintTop_toBottomOf="@+id/editTextQuestionVerifier" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>